--- a/emacs-config.org
+++ b/emacs-config.org
@@ -450,7 +450,7 @@ The keybindings for evaluating expressions in the browser are just like the Lisp
 
 #+END_QUOTE
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :eval never
 (use-package skewer-mode 
   :ensure t
   :init (skewer-setup))
@@ -751,7 +751,7 @@ Defino una función para insertar los headers que me permiten configurar el colo
 **** Themes
 ***** Readtheorg
 #+NAME: readtheorg
-#+BEGIN_SRC text
+#+BEGIN_SRC text :eval never
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
 #+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -763,7 +763,7 @@ Defino una función para insertar los headers que me permiten configurar el colo
 
 ***** Bigblow
 #+NAME: bigblow
-#+BEGIN_SRC text
+#+BEGIN_SRC text :eval never
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/htmlize.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/bigblow.css"/>
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/bigblow/css/hideshow.css"/>
