--- a/emacs-config.org
+++ b/emacs-config.org
@@ -1012,11 +1012,13 @@ Para cambiar el intérprete de PHP que usa org-mode es necesario configurar el n
 #+RESULTS:
 
 * Paquetes Varios
-** Autocomplete
+** Autocomplete: ido
 
    El paquete *ido* permite abrir archivos y elegir buffers tipeando solamente parte del nombre. El paquete *flx-ido* es una mejora en el matching para ido y el paquete *smex* implementa un autocomplete similar a ido para la búsqueda de funcionalidades dentro del editor (Meta-x).
 
-#+BEGIN_SRC emacs-lisp
+Si bien lo usé bastante al principio, ahora lo estoy reemplazando por ivy, counsel y swiper.
+
+#+BEGIN_SRC emacs-lisp :eval never
 (use-package ido 
   :ensure t 
   :config (progn (ido-mode t) (ido-everywhere t)))
@@ -1027,6 +1029,54 @@ Para cambiar el intérprete de PHP que usa org-mode es necesario configurar el n
   :ensure t
   :bind (("M-x" . smex))
   :config (smex-initialize))
+#+END_SRC
+
+** Autocomplete: ivy + counsel + swiper
+
+#+BEGIN_SRC emacs-lisp
+(use-package ivy :ensure t
+  :diminish (ivy-mode . "")
+  :bind
+  (:map ivy-mode-map)
+  :config
+  (ivy-mode 1)
+  ;; add ‘recentf-mode’ and bookmarks to ‘ivy-switch-buffer’.
+  (setq ivy-use-virtual-buffers t)
+  ;; number of result lines to display
+  (setq ivy-height 10)
+  ;; show matched/total count
+  (setq ivy-count-format "(%d/%d) ")
+  ;; no regexp by default
+  (setq ivy-initial-inputs-alist nil)
+  ;; configure regexp engine.
+  (setq ivy-re-builders-alist
+	;; fuzzy search for everything except swiper
+        '((swiper . ivy--regex-plus)
+          (swiper-all . ivy--regex-plus)
+          (t . ivy--regex-fuzzy))))
+
+(use-package counsel
+  :ensure t
+  :bind
+  ("M-x" . counsel-M-x)
+  ("C-c a" . counsel-ack))
+
+(use-package swiper
+  :ensure try
+  :config
+  (progn
+    (global-set-key "\C-s" 'swiper)
+    (global-set-key "\C-r" 'swiper)
+    (global-set-key (kbd "C-c u") 'swiper-all)
+    (global-set-key (kbd "M-x") 'counsel-M-x)
+    (global-set-key (kbd "C-c a") 'counsel-ack)
+    (global-set-key (kbd "C-x C-f") 'counsel-find-file)
+    ; Buscar mejores teclas para estas funciones
+    ;(global-set-key (kbd "C-c C-r") 'ivy-resume)
+    ;(global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
+    ;(global-set-key (kbd "<f2> u") 'counsel-unicode-char)
+    ;(global-set-key (kbd "C-x l") 'counsel-locate)
+    ))
 #+END_SRC
 
 ** Projectile
@@ -1100,3 +1150,11 @@ https://www.youtube.com/watch?v=cjoCNRpLanY&t=1155s
 - https://github.com/wasamasa/eyebrowse
 
 
+** Indium: Javascript debugger 
+
+https://github.com/NicolasPetton/Indium
+** Company mode: Autocomplete para métodos 
+
+- Company mode: http://company-mode.github.io/
+- PHP: https://github.com/arnested/php-extras
+- JS: https://github.com/ScottyB/ac-js2
