--- a/emacs-config.org
+++ b/emacs-config.org
@@ -264,6 +264,8 @@ Configuración: https://github.com/tonsky/FiraCode/wiki/Emacs-instructions
 - TODO: Agregar condición que verifique que la fuente Fira Code esté instalada
 ;; (when (member "Fira Code" (font-family-list)) ... )
 
+Hay un problema de compatibilidad con =php-mode= que hace que Emacs se cuelgue cuando se abre un archivo con php-mode activo. Para evitarlo tuve que comentar las líneas 47 y 48.
+
 #+BEGIN_SRC emacs-lisp
 (when (window-system)
   (set-default-font "Fira Code"))
@@ -276,8 +278,8 @@ Configuración: https://github.com/tonsky/FiraCode/wiki/Emacs-instructions
                (43 . ".\\(?:\\(?:\\+\\+\\)\\|[+>]\\)")
                (45 . ".\\(?:\\(?:-[>-]\\|<<\\|>>\\)\\|[<>}~-]\\)")
                (46 . ".\\(?:\\(?:\\.[.<]\\)\\|[.=-]\\)")
-               (47 . ".\\(?:\\(?:\\*\\*\\|//\\|==\\)\\|[*/=>]\\)")
-               (48 . ".\\(?:x[a-zA-Z]\\)")
+               ;(47 . ".\\(?:\\(?:\\*\\*\\|//\\|==\\)\\|[*/=>]\\)")
+               ;(48 . ".\\(?:x[a-zA-Z]\\)")
                (58 . ".\\(?:::\\|[:=]\\)")
                (59 . ".\\(?:;;\\|;\\)")
                (60 . ".\\(?:\\(?:!--\\)\\|\\(?:~~\\|->\\|\\$>\\|\\*>\\|\\+>\\|--\\|<[<=-]\\|=[<=>]\\||>\\)\\|[*$+~/<=>|-]\\)")
